Ajout des directives ngIf et ngFor

--- a/Angular/CoucousAdventure/src/app/app.component.html
+++ b/Angular/CoucousAdventure/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-list-projects></app-list-projects>
 
-<app-new-project-render></app-new-project-render>
+<app-new-project-render
+  title="Projet"
+  description="blablabla"></app-new-project-render>
