--- a/Angular/CoucousAdventure/src/app/list-projects/list-projects.component.html
+++ b/Angular/CoucousAdventure/src/app/list-projects/list-projects.component.html
@@ -1,16 +1,18 @@
 <div id="home" class="container">
   <div class="row mb-5 baloo-text">
-    <div class="card my-3">
-      <img class="card-img-top" 
-        [alt]="projects[0].image.alt" 
-        [src]="projects[0].image.src" />
-      <div class="card-body">
-        <h3 class="card-title text-center">
-          {{ projects[0].title }}
-        </h3>
-        <p class="card-text text-center">
-          {{ projects[0].description }}
-        </p>
+    <div *ngFor="let project of projects" class="col-sm-8 col-md-6 col-xxl-3 mx-xxl-auto">
+      <div class="card my-3">
+        <img class="card-img-top" 
+          [alt]="project.image.alt" 
+          [src]="project.image.src" />
+        <div class="card-body">
+          <h3 class="card-title text-center">
+            {{ project.title }}
+          </h3>
+          <p class="card-text text-center">
+            {{ project.description }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
