--- a/Angular/CoucousAdventure/src/app/new-project-render/new-project-render.component.html
+++ b/Angular/CoucousAdventure/src/app/new-project-render/new-project-render.component.html
@@ -28,9 +28,13 @@
         name="project-description"
         [(ngModel)]="newProject.description"></textarea>
     </div>
+
+    <div *ngIf="!isProjectRendered" class="d-grid gap-2 col-6 col-md-3 mx-auto">
+      <button type="button" class="btn btn-primary" (click)="newProjectRender()">Afficher le rendu</button>
+    </div>
   </form>
 
-  <div class="row mt-5 baloo-text">
+  <div *ngIf="isProjectRendered" class="row mt-5 baloo-text">
     <div class="card mx-auto my-3">
       <img 
         class="card-img-top" 
