Ajout du Routing et d'un service

--- a/Angular/CoucousAdventure/src/app/app.component.html
+++ b/Angular/CoucousAdventure/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-list-projects></app-list-projects>
+<app-navigation></app-navigation>
 
-<app-new-project-render
-  title="Projet"
-  description="blablabla"></app-new-project-render>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
