--- a/Angular/CoucousAdventure/src/app/list-projects/list-projects.component.html
+++ b/Angular/CoucousAdventure/src/app/list-projects/list-projects.component.html
@@ -1,4 +1,5 @@
 <div id="home" class="container">
+
   <div class="row mb-5 baloo-text">
     <div *ngFor="let project of projects" class="col-sm-8 col-md-6 col-xxl-3 mx-xxl-auto">
       <div class="card my-3">
@@ -10,7 +11,7 @@
             {{ project.title }}
           </h3>
           <p class="card-text text-center">
-            {{ project.description }}
+            {{ project.lastUpdate | date: 'short' | lowercase }}
           </p>
         </div>
       </div>
