--- a/Angular/CoucousAdventure/src/app/navigation/navigation.component.html
+++ b/Angular/CoucousAdventure/src/app/navigation/navigation.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
   <div class="container-fluid">
     <div class="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="">Accueil</a></li>
-        <li routerLinkActive="active"><a routerLink="projects">Mes Projets</a></li>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="">Accueil</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="projects">Mes Projets</a></li>
+        <li class="nav-item" *ngIf="!isAuth"><a class="nav-link" (click)="onLogin()">Se connecter</a></li>
       </ul>
     </div>
   </div>
